# 0601-1048

./: README.md  pyproject.toml  requirements.txt  run_smoke.py
demo_project/: smoke_config.yaml
demo_project/reports/: diff.html  latest.html  run_20260611_035343_77a4a1.json  run_20260611_035356_894acb.json
smoke_cli/: config.py  engine.py  main.py  models.py
smoke_cli/cases/: __init__.py  builtin.py
smoke_cli/commands/: __init__.py  compare.py  init.py  record.py  report.py  run.py
